--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -11,6 +11,12 @@ services:
     ports:
       - "5432:5432"
 
+  redis:
+    image: "redis:alpine"
+    container_name: redis
+    ports:
+      - "6379:6379"
+
   server_app:
     build:
       context: .
@@ -25,6 +31,8 @@ services:
       - DB_USER=postgres
       - DB_PASSWORD=password
       - DB_NAME=rickmorty_db
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
 
 volumes:
   postgres_data_db:
