--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "type-graphql": "^2.0.0-rc.2",
     "typedi": "^0.10.0",
