--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
+    "graphql-request": "^7.1.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18"
